--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,24 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Personal Website</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
-  <load="partials/header.html" />
-
+  <load  src="partials/header.html" />
   <section>
     <h1>Example page title</h1>
     <!-- Path to images as from index.html file -->
@@ -21,6 +33,7 @@
   <!-- Loads the specified .html file
   <load="partials /vite-promo.html" /> -->
 
+  <load src="partials/work-together.html" />
   <script type="module" src="./main.js"></script>
 </body>
 
